--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-tedious_userName=alongolo
-tedious_password=bB321321
-tedious_server=recipesnew.database.windows.net
-tedious_database=recipe
-COOKIE_SECRET=abc
-spooncular_apiKey=df9dc266c11742979831b268d9def88b
+tedious_userName=nyserver
+tedious_password=irisandchen123
+tedious_server=myserverbgu.database.windows.net
+tedious_database=myResourceDB
+COOKIE_SECRET=irischen
+spooncular_apiKey=570f1120b25b4810b76edcbba14a0fb7
