--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "4.0.1",
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.5",
-    "bcrypt": "4.0.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
