--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "debug": "node --nolazy --inspect-brk=9229 index.js"
+    
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
