--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "start": "node index.js",
     "debug": "node --nolazy --inspect-brk=9229 index.js"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "4.0.1",
+    "bcryptjs": "^2.4.3",
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
